use overflow hidden to prevent scrolling when dragging

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ input[type=search] {
 #dataflow {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   position: absolute;
 }
 
